--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-map/russia": "^1.0.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router": "^7.0.1",
     "react-simple-maps": "^3.0.0"
   },
   "devDependencies": {
